<resources>
    <string name="app_name">AndroidClubApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="android_club_fragment_label">Android Club</string>
    <string name="muhammed_fragment_label">Muhammed</string>
    <string name="search_fragment_label">Search</string>
    <string name="manage_favorites">Manage Favorites</string>
    <string name="details_fragment_label">Details</string>
    <string name="david_fragment_label">David</string>
    <string name="emma_fragment_label">Emma</string>
    <string name="ben_fragment_label">Ben</string>
    <string name="lee_fragment_label">Lee</string>
    <string name="jake_fragment_label">Jake</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>

    <string name="hello_first_fragment">Android Club</string>
    <string name="pokeSearch">Poké Search</string>
    <string name="pokeSearchResults">Poké Search Results</string>
    <string name="pokeSearchInput">Start typing a Pokémon…</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pokemonText">Pokemon!</string>
    <string name="back">Back</string>
    <string name="type">Type</string>
    <string name="type_2">Type 2</string>

    <string name="favorite_id">#%s</string>
    <string name="description">Description: %s</string>
    <string name="name">Name</string>
    <string name="item_favorite_default">My Favorite Pokemon..</string>
</resources>