<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokeSearchFragment">


    <TextView
        android:id="@+id/pokeSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pokeSearch"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/pokeSearchResults"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pokeSearchResults"
        android:layout_width="match_parent"
        android:layout_height="650px"
        app:layout_constraintBottom_toTopOf="@+id/pokeSearchInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokeSearch" />

    <EditText
        android:id="@+id/pokeSearchInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/pokeSearchInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pokeSearchResults" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        tools:layout_editor_absoluteX="320dp"
        tools:layout_editor_absoluteY="679dp" />




</androidx.constraintlayout.widget.ConstraintLayout>