<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokeDetailsFragment">

    <GridLayout
        android:id="@+id/detailsGrid"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:rowCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.9">

        <ImageView
            android:id="@+id/detailsPokemonImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_column="0"
            android:layout_row="0"
            tools:src="@tools:sample/avatars"
            android:layout_columnWeight="0.4"
            android:layout_rowWeight="0.3"
            android:layout_gravity="fill"
            />

        <GridLayout
            android:id="@+id/detailsInformationGrid"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:columnCount="2"
            android:rowCount="3"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="0.4"
            android:layout_rowWeight="0.3">

            <TextView
                android:id="@+id/detailsPokemonIndex"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/pokemonText"
                android:textSize="24sp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="0.8"
                android:layout_rowWeight="0.3"
                android:layout_gravity="fill"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/favoriteAdd"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="0.2"
                android:layout_rowWeight="0.3"
                android:src="@drawable/ic_baseline_favorite_24"
                app:tint="@color/dark"
                android:layout_gravity="fill"/>

            <TextView
                android:id="@+id/detailsPokemonName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/hello_first_fragment"
                android:textSize="30sp"
                android:layout_rowWeight="0.3"
                android:layout_gravity="fill"
                android:gravity="center"
                android:layout_columnSpan="2"
                />

            <GridLayout
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:id="@+id/detailsTypeGrid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_columnSpan="2"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_rowWeight="0.3"
                android:columnCount="2">

                <TextView
                    android:id="@+id/detailsType"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="0dp"
                    android:layout_columnWeight="0.4"
                    android:layout_height="match_parent"
                    android:layout_column="0"
                    android:gravity="center"
                    android:background="@drawable/rounded_button_blue"
                    android:text="@string/type"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/detailsType2"
                    android:layout_width="0dp"
                    android:layout_marginEnd="15dp"
                    android:layout_columnWeight="0.4"
                    android:layout_height="match_parent"
                    android:layout_column="1"
                    android:gravity="center"
                    android:background="@drawable/rounded_button_blue"
                    android:text="@string/type_2"
                    android:textColor="@color/white"
                    tools:visibility="visible" />

            </GridLayout>

        </GridLayout>

        <GridLayout
            android:id="@+id/detailsDescriptionGrid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_blue"
            android:columnCount="1"
            android:rowCount="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:layout_rowWeight="0.5"
            android:layout_columnWeight="1"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintWidth_percent="0.9">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                android:background="@drawable/rounded_button_blue"
                android:text="@string/description"
                android:textColor="@color/white"
                tools:visibility="visible" />


        </GridLayout>
    </GridLayout>


    <Button
        android:id="@+id/detailsBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsGrid" />

</androidx.constraintlayout.widget.ConstraintLayout>